add some stuff incl decompose